# andromoney-project-2

./: .gitignore  README.md  andro_main.py  andro_money.py  pyproject.toml  requirements.txt
AndroMoney/: andro_control.py  andro_data.py  andro_drive.py  andro_fx.py  andro_writer.py  settings.py
docs/superpowers/plans/: 2026-06-21-google-drive-source.md
docs/superpowers/specs/: 2026-06-21-google-drive-source-design.md
src/andro_money/: __main__.py
src/andro_money/andromoney/: andro_control.py  andro_data.py  andro_drive.py  andro_writer.py  settings.py
tests/: test_andro_data.py  test_andro_drive.py
