[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "andro-money"
version = "0.1.0"
description = "Processes AndroMoney expense data and generates a summarised Excel report with automatic currency conversion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.0",
    "numpy>=2.0",
    "openpyxl>=3.0",
    "pandas>=2.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/andro_money"]

[tool.pytest.ini_options]
testpaths = ["tests"]
